<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DroneView app</string>
    <string name="action_settings">Settings</string>
    <string name="disconnected">Disconnected</string>
    <string name="product_information">Product Information</string>
    <string name="connection_loose">Status: No Product Connected</string>
    <string name="sdk_version">DJI SDK Version: 4.4.1</string>
    <string name="Tutorial">Tutorial</string>
    <string name="Settings">Settings</string>
    <string name="Start">Start</string>
    <string name="titleApp">DroneView</string>
    <string name="subtitleApp">FPV drone control</string>
    <string name="HowDoesItWork">How does it work?</string>
    <string name="GotIt">Got it!</string>
    <string name="SeeVideo">Watch video</string>
    <string name="ConnectTheDrone">Connect the drone</string>
    <string name="FirstStep">1. Turn on the drone</string>
    <string name="SecondStep">2. Connect the phone to the drone\'s wifi</string>
    <string name="Fly">Fly</string>
    <string name="GoBack">Go back</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="SeeVoiceCommands">See voice commands</string>
    <string name="VoiceCommands">Voice commands</string>
    <string name="VoiceCommandsText">When you start your FPV your drone will follow the following voice commands: \n  - Take off\n  - Land\n  - Up\n  - Down\n  - Photo\n  - Start recording\n  - Stop recording</string>
    <string name="FaceStraigth">Face straigth</string>
    <string name="Face45">Face 45 degrees down</string>
    <string name="FaceDown">Face completly down</string>
    <string name="Gimbal">Gimbal</string>
    <string name="Throttle">Throttle</string>

</resources>
