<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center|top">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ConnectTheDrone"
        android:textSize="32dp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        android:gravity="left"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/FirstStep"
        android:textSize="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/SecondStep"
        android:textSize="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/text_connection_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Status: No Product Connected"
        android:textColor="@android:color/black"
        android:textSize="24dp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp" />

    <TextView
        android:id="@+id/tvFly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/Fly"
        android:background="@drawable/accent_button"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/tvGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/GoBack"
        android:background="@drawable/accent_button"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold"/>

</LinearLayout>
