<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/VoiceCommands"
        android:textSize="32dp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:textSize="14dp"
        android:text="@string/VoiceCommandsText"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/tvGotIt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/GotIt"
        android:background="@drawable/accent_button"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_margin="16dp"/>

</LinearLayout>
