<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/cover_image"
        android:scaleType="centerCrop"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blackTranslucent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:gravity="center">

        <TextView
            android:id="@+id/tvTutorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_margin="16dp"
            android:text="@string/Tutorial"
            android:background="@drawable/default_button"
            android:textColor="@color/white"
            android:textSize="16dp"/>

        <ImageView
            android:id="@+id/ivSettings"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:tint="@color/white"
            android:src="@drawable/settings"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Start"
        android:background="@drawable/accent_button"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerVertical="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleApp"
            android:textSize="32dp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitleApp"
            android:textSize="24dp"
            android:textColor="@color/white"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

    </LinearLayout>



</RelativeLayout>