<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HowDoesItWork"
            android:textSize="32dp"
            android:textStyle="bold"
            android:layout_margin="16dp"
            android:textColor="@color/colorPrimary"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/tvWatchVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/SeeVideo"
            android:background="@drawable/accent_button"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/move_forw_back"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/move_sides"
                android:layout_weight="1"
                android:layout_marginStart="8dp"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/move_turn"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/move_sides"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:visibility="invisible"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:gravity="right"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/tvVoiceCommands"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/SeeVoiceCommands"
                    android:background="@drawable/accent_button"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:id="@+id/tvGotIt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/GotIt"
                    android:background="@drawable/accent_button"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"/>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
